--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
     "aws-amplify": "^6.6.6",
-    "next": "^14.2.10",
+    "chart.js": "^4.5.0",
+    "next": "^15.4.0-canary.114",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18"
   },
   "devDependencies": {
